<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_background"
    android:padding="15dp"
    tools:context=".Activity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="15dp">

        <TextView
            android:id="@+id/txtName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/TxtName2"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtScore2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/txtScore2"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="200dp"
            android:text="@string/txtQuestion"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAns1" />

        <Button
            android:id="@+id/btnAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAns2" />

        <Button
            android:id="@+id/btnAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAns3" />

        <Button
            android:id="@+id/btnAnswer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAns4" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>